# crafting-gif

./: .gitignore  Cargo.toml  README.md  resize.sh
examples/: barrel.toml  bed.toml
src/: cli.rs  config.rs  main.rs
