[package]
name = "crafting-gif"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
flate2 = { version = "1.1.4", features = ["zlib-rs"], default-features = false }
gif = "0.13.3"
image = "0.25.8"
phf = "0.13.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[build-dependencies]
flate2 = { version = "1.1.4", features = ["zlib-rs"], default-features = false }
phf_codegen = "0.13.1"
